--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"preview": "vite preview",
 		"lint:es": "eslint . --ext .js,.jsx,.ts,.tsx",
 		"lint:style": "stylelint \"**/*.{css,scss}\"",
+		"lint:styles": "stylelint \"src/**/*.css\"",
 		"lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix && stylelint \"**/*.{css,scss}\" --fix",
 		"lint": "yarn lint:es && yarn lint:style",
 		"husky": "husky install",
@@ -58,6 +59,7 @@
 		"stylelint-config-airbnb": "^0.0.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recess-order": "^3.0.0",
+		"stylelint-scss": "^4.3.0",
 		"typescript": "^4.6.4"
 	}
 }
