--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"@vitejs/plugin-react": "^2.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"vite": "^3.1.2"
+		"vite": "^3.1.2",
+		"vite-tsconfig-paths": "^3.5.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
