build: config stylelint

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"lint:es": "eslint . --ext .js,.jsx,.ts,.tsx",
-		"lint:style": "stylelint \"**/*.{css,scss}\"",
-		"lint:styles": "stylelint \"src/**/*.css\"",
+		"lint:styles": "stylelint \"**/*.{css,scss}\"",
 		"lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix && stylelint \"**/*.{css,scss}\" --fix",
 		"lint": "yarn lint:es && yarn lint:style",
 		"husky": "husky install",
@@ -57,9 +56,9 @@
 		"lint-staged": "^13.0.3",
 		"prettier": "2.7.1",
 		"stylelint": "^14.11.0",
-		"stylelint-config-airbnb": "^0.0.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recess-order": "^3.0.0",
+		"stylelint-config-standard": "^28.0.0",
 		"stylelint-scss": "^4.3.0",
 		"typescript": "^4.6.4"
 	}
