--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,73 +1,35 @@
 {
 	"extends": [
-		"stylelint-config-airbnb",
+		"stylelint-config-standard",
 		"stylelint-config-recess-order",
 		"stylelint-config-prettier"
 	],
 	"rules": {
-		"indentation": "tab",
-		"selector-no-id": true,
-		"selector-list-comma-newline-after": "always",
-		"declaration-colon-space-after": "always",
-		"declaration-colon-space-before": "never",
-		"block-opening-brace-space-before": "always",
+		"alpha-value-notation": "number",
+		"declaration-block-no-duplicate-properties": true,
+		"hue-degree-notation": "number",
+		"color-function-notation": "legacy",
+		"at-rule-name-case": "lower",
+		"color-hex-case": "lower",
+		"color-hex-length": "long",
+		"string-quotes": "single",
+		"length-zero-no-unit": null,
+		"font-family-name-quotes": "always-unless-keyword",
+		"font-weight-notation": "numeric",
+		"keyframe-selector-notation": "percentage-unless-within-keyword-only-block",
 		"declaration-block-single-line-max-declarations": 1,
+		"number-max-precision": 2,
+		"no-unknown-animations": true,
 		"rule-empty-line-before": [
-			"always",
+			"always-multi-line",
 			{
-				"ignore": [
-					"after-comment"
-				]
-			}
-		],
-		"comment-empty-line-before": [
-			"always",
-			{
-				"ignore": [
-					"stylelint-commands"
-				]
-			}
-		],
-		"declaration-property-value-blacklist": {
-			"/^border/": [
-				"none"
-			]
-		},
-		"at-rule-blacklist": [
-			"extend"
-		],
-		"max-nesting-depth": 3,
-		"declaration-no-important": true,
-		"selector-max-compound-selectors": 3,
-		"selector-no-qualifying-type": true,
-		"no-duplicate-selectors": true,
-		"block-no-empty": true,
-		"at-rule-empty-line-before": [
-			"always",
-			{
-				"ignoreAtRules": [
-					"import",
+				"except": [
+					"after-single-line-comment",
 					"first-nested"
 				]
 			}
 		],
-		"at-rule-name-case": "lower",
-		"color-hex-case": "lower",
-		"color-hex-length": "long",
-		"color-no-invalid-hex": true,
-		"string-quotes": "single",
-		"value-no-vendor-prefix": true,
-		"value-list-comma-space-after": "always-single-line",
-		"shorthand-property-no-redundant-values": true,
-		"comment-whitespace-inside": "always",
-		"function-comma-space-after": "always-single-line",
-		"function-comma-space-before": "never",
-		"length-zero-no-unit": true,
-		"number-no-trailing-zeros": true,
-		"declaration-block-trailing-semicolon": "always",
-		"declaration-block-no-duplicate-properties": true,
-		"declaration-block-semicolon-newline-after": "always",
-		"block-closing-brace-empty-line-before": "never",
-		"block-closing-brace-newline-before": "always"
+		"indentation": "tab",
+		"linebreaks": "unix"
 	}
 }
