build: config lint-staged

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,10 +28,7 @@
 		"sourceType": "module",
 		"project": "./tsconfig.eslint.json"
 	},
-	"plugins": [
-		"react",
-		"@typescript-eslint"
-	],
+	"plugins": ["react", "@typescript-eslint"],
 	"rules": {
 		// React v.17.0
 		"react/prop-types": 0,
@@ -65,14 +62,8 @@
 			}
 		],
 		"react/jsx-props-no-spreading": "off",
-		"react/jsx-indent": [
-			"error",
-			"tab"
-		],
-		"react/jsx-indent-props": [
-			"error",
-			"tab"
-		],
+		"react/jsx-indent": ["error", "tab"],
+		"react/jsx-indent-props": ["error", "tab"],
 		"react/jsx-curly-brace-presence": [
 			"error",
 			{
@@ -80,10 +71,7 @@
 				"children": "never"
 			}
 		],
-		"react/jsx-boolean-value": [
-			"warn",
-			"never"
-		],
+		"react/jsx-boolean-value": ["warn", "never"],
 		"react/jsx-tag-spacing": [
 			"error",
 			{
@@ -102,12 +90,7 @@
 		"react/jsx-filename-extension": [
 			1,
 			{
-				"extensions": [
-					".js",
-					".jsx",
-					".ts",
-					".tsx"
-				]
+				"extensions": [".js", ".jsx", ".ts", ".tsx"]
 			}
 		],
 		"no-unused-vars": "off",
@@ -118,6 +101,22 @@
 		"import/prefer-default-export": "off",
 		"import/no-unresolved": 0,
 		"import/extensions": 0,
+		"import/order": [
+			"error",
+			{
+				"groups": [
+					"builtin",
+					"external",
+					"internal",
+					"parent",
+					"sibling",
+					"index",
+					"object",
+					"type"
+				],
+				"newlines-between": "always"
+			}
+		],
 		// style code
 		"indent": [
 			"error",
@@ -126,34 +125,13 @@
 				"SwitchCase": 1
 			}
 		],
-		"quotes": [
-			2,
-			"single"
-		],
-		"jsx-quotes": [
-			"error",
-			"prefer-double"
-		],
-		"semi": [
-			2,
-			"always"
-		],
-		"linebreak-style": [
-			2,
-			"unix"
-		],
-		"wrap-iife": [
-			2,
-			"inside"
-		],
-		"brace-style": [
-			2,
-			"1tbs"
-		],
-		"block-spacing": [
-			2,
-			"always"
-		],
+		"quotes": [2, "single"],
+		"jsx-quotes": ["error", "prefer-double"],
+		"semi": [2, "always"],
+		"linebreak-style": [2, "unix"],
+		"wrap-iife": [2, "inside"],
+		"brace-style": [2, "1tbs"],
+		"block-spacing": [2, "always"],
 		"keyword-spacing": [
 			2,
 			{
@@ -162,10 +140,7 @@
 				"overrides": {}
 			}
 		],
-		"space-before-blocks": [
-			2,
-			"always"
-		],
+		"space-before-blocks": [2, "always"],
 		"space-before-function-paren": [
 			2,
 			{
@@ -173,14 +148,8 @@
 				"named": "never"
 			}
 		],
-		"arrow-parens": [
-			"error",
-			"as-needed"
-		],
-		"arrow-body-style": [
-			2,
-			"as-needed"
-		],
+		"arrow-parens": ["error", "as-needed"],
+		"arrow-body-style": [2, "as-needed"],
 		"comma-spacing": [
 			2,
 			{
@@ -188,18 +157,9 @@
 				"after": true
 			}
 		],
-		"comma-style": [
-			2,
-			"last"
-		],
-		"array-bracket-spacing": [
-			2,
-			"never"
-		],
-		"space-in-parens": [
-			2,
-			"never"
-		],
+		"comma-style": [2, "last"],
+		"array-bracket-spacing": [2, "never"],
+		"space-in-parens": [2, "never"],
 		// rules in js
 		"no-const-assign": 1,
 		"no-var": 1,
@@ -222,10 +182,7 @@
 			"version": "detect"
 		},
 		"import/parsers": {
-			"@typescript-eslint/parser": [
-				".ts",
-				".tsx"
-			]
+			"@typescript-eslint/parser": [".ts", ".tsx"]
 		},
 		"import/resolver": {
 			"typescript": {
