--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"name": "typescript-vite-react",
 	"author": "kimdat546",
 	"description": "setup project for typescript, tailwind, vite, react",
-	"type": "module",
 	"version": "1.0.0",
 	"private": true,
 	"license": "MIT",
@@ -19,14 +18,10 @@
 		"lint:es": "eslint . --ext .js,.jsx,.ts,.tsx",
 		"lint:styles": "stylelint \"**/*.{css,scss}\"",
 		"lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix && stylelint \"**/*.{css,scss}\" --fix",
-		"lint": "yarn lint:es && yarn lint:style",
-		"husky": "husky install",
+		"lint": "yarn lint:es && yarn lint:styles",
 		"stylelint-check": "stylelint-config-prettier-check",
-		"prettier": "prettier --write .",
-		"lint-staged": {
-			"*.{ts,tsx,js,jsx}": "eslint --cache --fix",
-			"styled.ts": "stylelint --cache"
-		}
+		"husky": "husky install",
+		"prettier": "prettier --write ."
 	},
 	"dependencies": {
 		"@vitejs/plugin-react": "^2.1.0",
