--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,9 +1,4 @@
 {
 	"extends": "./tsconfig.json",
-	"include": [
-		"src",
-		"tests",
-		"commitlint.config.js",
-		"vite.config.ts"
-	]
+	"include": ["src", "tests", "commitlint.config.js", "vite.config.ts"]
 }
