--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"useDefineForClassFields": true,
-		"lib": [
-			"DOM",
-			"DOM.Iterable",
-			"ESNext"
-		],
+		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"allowJs": false,
 		"skipLibCheck": true,
 		"esModuleInterop": false,
@@ -21,17 +17,11 @@
 		"jsx": "react-jsx",
 		"baseUrl": "./src",
 		"paths": {
-			"~/*": [
-				"./*"
-			],
-			"component/*": [
-				"./component/*"
-			]
+			"~/*": ["./*"],
+			"components/*": ["./components/*"]
 		}
 	},
-	"include": [
-		"src"
-	],
+	"include": ["src"],
 	"references": [
 		{
 			"path": "./tsconfig.node.json"
