--- a/package.json
+++ b/package.json
@@ -21,22 +21,24 @@
 		"lint": "yarn lint:es && yarn lint:styles",
 		"stylelint-check": "stylelint-config-prettier-check",
 		"husky": "husky install",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write .",
+		"test": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
-		"@vitejs/plugin-react": "^2.1.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"vite": "^3.1.2",
-		"vite-tsconfig-paths": "^3.5.0"
+		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"@typescript-eslint/parser": "^5.37.0",
+		"@vitejs/plugin-react": "^2.1.0",
 		"eslint": "^8.23.1",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
@@ -48,6 +50,7 @@
 		"eslint-plugin-react": "^7.31.8",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"husky": "^8.0.1",
+		"jsdom": "^20.0.0",
 		"lint-staged": "^13.0.3",
 		"prettier": "2.7.1",
 		"stylelint": "^14.11.0",
@@ -55,6 +58,9 @@
 		"stylelint-config-recess-order": "^3.0.0",
 		"stylelint-config-standard": "^28.0.0",
 		"stylelint-scss": "^4.3.0",
-		"typescript": "^4.6.4"
+		"typescript": "^4.6.4",
+		"vite": "^3.1.3",
+		"vite-tsconfig-paths": "^3.5.0",
+		"vitest": "^0.23.4"
 	}
 }
