--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"useDefineForClassFields": true,
-		"lib": ["DOM", "DOM.Iterable", "ESNext"],
+		"lib": [
+			"DOM",
+			"DOM.Iterable",
+			"ESNext"
+		],
 		"allowJs": false,
 		"skipLibCheck": true,
 		"esModuleInterop": false,
@@ -17,11 +21,18 @@
 		"jsx": "react-jsx",
 		"baseUrl": "./src",
 		"paths": {
-			"~/*": ["./*"],
-			"components/*": ["./components/*"]
+			"~/*": [
+				"./*"
+			],
+			"components/*": [
+				"./components/*"
+			]
 		}
 	},
-	"include": ["src"],
+	"include": [
+		"src",
+		"vite.config.ts",
+	],
 	"references": [
 		{
 			"path": "./tsconfig.node.json"
