--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -20,7 +20,22 @@
 		"rule-empty-line-before": [
 			"always-multi-line",
 			{
-				"except": ["after-single-line-comment", "first-nested"]
+				"except": [
+					"after-single-line-comment",
+					"first-nested"
+				]
+			}
+		],
+		"at-rule-no-unknown": [
+			true,
+			{
+				"ignoreAtRules": [
+					"tailwind",
+					"apply",
+					"variants",
+					"responsive",
+					"screen"
+				]
 			}
 		]
 	}
