--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"@typescript-eslint/parser": "^5.37.0",
 		"@vitejs/plugin-react": "^2.1.0",
+		"autoprefixer": "^10.4.12",
 		"eslint": "^8.23.1",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
@@ -52,12 +53,14 @@
 		"husky": "^8.0.1",
 		"jsdom": "^20.0.0",
 		"lint-staged": "^13.0.3",
+		"postcss": "^8.4.16",
 		"prettier": "2.7.1",
 		"stylelint": "^14.11.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-recess-order": "^3.0.0",
 		"stylelint-config-standard": "^28.0.0",
 		"stylelint-scss": "^4.3.0",
+		"tailwindcss": "^3.1.8",
 		"typescript": "^4.6.4",
 		"vite": "^3.1.3",
 		"vite-tsconfig-paths": "^3.5.0",
