--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,11 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["src", "tests", "commitlint.config.js", "vite.config.ts"]
+	"include": [
+		"src",
+		"tests",
+		"commitlint.config.js",
+		"vite.config.ts",
+		"tailwind.config.js",
+		"postcss.config.js"
+	]
 }
